tests/query_test/test_join_queries.py
@@ -7,7 +7,7 @@ import pytest
 from copy import copy
 from tests.common.test_vector import *
 from tests.common.impala_test_suite import *
-from tests.common.skip import SkipIfS3, SkipIfIsilon
+from tests.common.skip import SkipIf, SkipIfS3, SkipIfIsilon
 
 class TestJoinQueries(ImpalaTestSuite):
   BATCH_SIZES = [0, 1]
@@ -37,6 +37,7 @@ class TestJoinQueries(ImpalaTestSuite):
 
   @SkipIfS3.hbase
   @SkipIfIsilon.hbase
+  @SkipIf.skip_hbase
   def test_joins_against_hbase(self, vector):
     new_vector = copy(vector)
     new_vector.get_value('exec_option')['batch_size'] = vector.get_value('batch_size')
